--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculate Any</title>
     
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="output.css">
 </head>
 <body>
 <div class="model bg-black h-[75vh] w-[25vw] rounded-[15px] ml-[550px] mt-[70px] p-5">
